hydro2/hydro2-operator-derive/tests/trybuild/fail_06_too_many_outputs.stderr
error: At most four outputs allowed: output0..output3.
  --> tests/trybuild/fail_06_too_many_outputs.rs:16:5
   |
16 |     output4="i32" // this is the 5th → should fail
   |     ^^^^^^^
